syntax = "proto3";

//输出package为raft.kv
option java_package = "com.raft.kv";
//输出包装名为Protos
option java_outer_classname = "Protos";

//重定向
message Redirect {
    string leader_id = 1;
}

//成功
message Success {}

//失败
message Failure {
    int32 error_code = 1;
    string message = 2;
}

//SET命令
message SetCommand {
    string request_id = 1;
    string key = 2;
    bytes value = 3;
}

//GET命令
message GetCommand {
    string key = 1;
}

//GET命令响应
message GetCommandResponse {
    bool found = 1;
    bytes value = 2;
}

//message EntryList {
//    message Entry {
//        string key = 1;
//        bytes value = 2;
//    }
//    repeated Entry entries = 1;
//}
//
//message AddNodeCommand {
//    string node_id = 1;
//    string host = 2;
//    int32 port = 3;
//}
//
//message RemoveNodeCommand {
//    string node_id = 1;
//}